[project]
name = "ai-test-time"
version = "0.1.0"
description = "AI Test-Time Compute 評価システム - 軽量ローカルLLMの素の出力とテスト時計算アルゴリズムを比較評価"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "streamlit>=1.30",
    "plotly>=5.0",
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
