[project]
name = "ai-test-time"
version = "0.1.0"
description = "AI Test-Time Compute 評価システム - 軽量ローカルLLMの素の出力とテスト時計算アルゴリズムを比較評価"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0,<2",
    "streamlit>=1.30,<2",
    "plotly>=5.0,<6",
    "pydantic>=2.0,<3",
    "numpy>=1.24,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
